--- a/inventory.html
+++ b/inventory.html
@@ -95,6 +95,9 @@
         background: #fff;
         box-shadow: 0 2px 8px rgba(0,0,0,0.1);
       }
+      .main-header-info {
+        flex: 1;
+      }
       .main-header-info h2 {
         font-size: 24px;
         font-weight: 600;
@@ -122,32 +125,44 @@
       /* Parts Grid */
       .parts-grid {
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
-        gap: 16px;
+        grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+        gap: 10px;
+      }
+      .progress-row {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 4px;
+        font-size: 12px;
       }
       .filter-controls {
         display: flex;
-        gap: 20px;
-        margin-bottom: 20px;
+        gap: 16px;
       }
       .filter-controls label {
         display: flex;
         align-items: center;
         gap: 6px;
-        font-size: 14px;
+        font-size: 12px;
         cursor: pointer;
       }
       .filter-controls input[type="checkbox"] {
-        width: 16px;
-        height: 16px;
+        width: 14px;
+        height: 14px;
         cursor: pointer;
       }
       .part-card {
         background: #fff;
-        border-radius: 12px;
-        box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+        border-radius: 8px;
+        box-shadow: 0 1px 4px rgba(0,0,0,0.1);
         overflow: hidden;
-        transition: opacity 0.5s, transform 0.2s;
+        transition: opacity 0.5s;
+        display: flex;
+        flex-direction: column;
+      }
+      .part-card-body {
+        display: flex;
+        align-items: stretch;
       }
       .part-card.fade-out {
         opacity: 0;
@@ -155,46 +170,38 @@
       .part-card.hidden {
         display: none;
       }
-      .part-card-color {
-        padding: 6px 10px;
-        font-size: 11px;
-        font-weight: 600;
-        text-align: center;
-        color: #fff;
-        text-shadow: 0 1px 2px rgba(0,0,0,0.3);
-      }
-      .part-card:hover {
-        transform: translateY(-2px);
-        box-shadow: 0 4px 16px rgba(0,0,0,0.15);
-      }
       .part-card.complete {
         background: #555;
       }
       .part-card.complete .part-card-image {
-        background: #555;
+        background: #444;
       }
       .part-card.complete .part-card-image img {
         opacity: 0.5;
       }
       .part-card.complete .part-card-info {
         background: #555;
-        border-top-color: #666;
       }
       .part-card.complete .part-card-info h4,
       .part-card.complete .part-card-controls span {
         color: #ccc;
       }
+      .part-card.complete .part-card-color {
+        background: #666 !important;
+      }
       .part-card-image {
         position: relative;
-        height: 100px;
+        width: 80px;
+        height: 80px;
+        min-width: 80px;
         background: #f9f9f9;
         display: flex;
         align-items: center;
         justify-content: center;
       }
       .part-card-image img {
-        max-width: 90%;
-        max-height: 90%;
+        max-width: 70px;
+        max-height: 70px;
         object-fit: contain;
       }
       .part-card-image a {
@@ -202,60 +209,64 @@
       }
       .part-card-checkmark {
         position: absolute;
-        top: 8px;
-        right: 8px;
-        width: 28px;
-        height: 28px;
+        top: 4px;
+        right: 4px;
+        width: 18px;
+        height: 18px;
         background: #4caf50;
         border-radius: 50%;
         display: none;
         align-items: center;
         justify-content: center;
         color: white;
-        font-size: 16px;
+        font-size: 12px;
         font-weight: bold;
       }
       .part-card.complete .part-card-checkmark {
         display: flex;
       }
       .part-card-info {
-        padding: 12px;
-        border-top: 1px solid #eee;
+        flex: 1;
+        padding: 8px 12px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        min-width: 0;
       }
       .part-card-info h4 {
-        font-size: 11px;
+        font-size: 12px;
         font-weight: 500;
-        color: #666;
-        margin-bottom: 8px;
+        color: #333;
+        margin-bottom: 4px;
         line-height: 1.3;
-        height: 28px;
-        overflow: hidden;
         display: -webkit-box;
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
+        overflow: hidden;
       }
       .part-card-controls {
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content: flex-end;
+        gap: 8px;
       }
       .part-card-controls span {
-        font-size: 13px;
+        font-size: 14px;
         font-weight: 600;
-        color: #333;
+        color: #666;
       }
       .part-card-buttons {
         display: flex;
         gap: 4px;
       }
       .part-card-buttons button {
-        width: 28px;
-        height: 28px;
+        width: 24px;
+        height: 24px;
         border: none;
-        border-radius: 6px;
+        border-radius: 4px;
         background: #e0e0e0;
         color: #333;
-        font-size: 16px;
+        font-size: 14px;
         font-weight: bold;
         cursor: pointer;
         transition: background 0.2s;
@@ -266,6 +277,13 @@
       .part-card-buttons button:active {
         background: #c0c0c0;
       }
+      .part-card-color {
+        padding: 4px 10px;
+        font-size: 10px;
+        font-weight: 600;
+        text-align: center;
+        color: #fff;
+      }
 
       /* Empty state */
       .empty-state {
@@ -275,6 +293,35 @@
         height: 300px;
         color: #888;
         font-size: 16px;
+      }
+
+      /* Compact mode */
+      .parts-grid.compact {
+        grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+      }
+      .compact .part-card-info h4 {
+        display: none;
+      }
+      .compact .part-card-body {
+        flex-direction: column;
+      }
+      .compact .part-card-image {
+        width: 100%;
+        height: 70px;
+      }
+      .compact .part-card-info {
+        padding: 6px 8px;
+      }
+      .compact .part-card-controls {
+        justify-content: center;
+      }
+      .compact .part-card-controls span {
+        font-size: 11px;
+      }
+      .compact .part-card-buttons button {
+        width: 20px;
+        height: 20px;
+        font-size: 12px;
       }
 
       footer {
@@ -290,6 +337,51 @@
       footer a {
         color: #888;
       }
+
+      @media print {
+        .sidebar {
+          display: none;
+        }
+        .layout {
+          grid-template-columns: 1fr;
+        }
+        footer {
+          display: none;
+        }
+        .part-card-color {
+          -webkit-print-color-adjust: exact;
+          print-color-adjust: exact;
+        }
+        .part-card-buttons {
+          display: none;
+        }
+        .part-card {
+          break-inside: avoid;
+        }
+        .filter-controls {
+          display: none;
+        }
+        .parts-grid.compact {
+          grid-template-columns: repeat(8, 1fr);
+        }
+        .compact .part-card-image {
+          height: 50px;
+        }
+        .compact .part-card-image img {
+          max-width: 45px;
+          max-height: 45px;
+        }
+        .compact .part-card-info {
+          padding: 4px 6px;
+        }
+        .compact .part-card-controls span {
+          font-size: 9px;
+        }
+        .compact .part-card-color {
+          padding: 2px 4px;
+          font-size: 8px;
+        }
+      }
     </style>
   </head>
   <body>
@@ -304,10 +396,6 @@
       <main class="main">
         <div class="main-header" id="main-header">
           <div class="empty-state">Select a set from the sidebar</div>
-        </div>
-        <div class="filter-controls" id="filter-controls" style="display: none;">
-          <label><input type="checkbox" id="filter-complete" checked> Complete</label>
-          <label><input type="checkbox" id="filter-incomplete" checked> Not Complete</label>
         </div>
         <div class="parts-grid" id="parts-grid"></div>
       </main>
@@ -375,10 +463,6 @@
         inventory = await inventoryRes.json();
         colors = await colorsRes.json();
 
-        // Set up filter checkbox listeners
-        document.getElementById("filter-complete").addEventListener("change", applyFilters);
-        document.getElementById("filter-incomplete").addEventListener("change", applyFilters);
-
         renderSetList();
 
         // Restore last selected or pick first
@@ -428,9 +512,6 @@
           el.classList.toggle("active", el.dataset.setId === setId);
         });
 
-        // Show filter controls
-        document.getElementById("filter-controls").style.display = "flex";
-
         renderMainContent();
       }
 
@@ -467,9 +548,30 @@
             <div class="progress-bar">
               <div class="progress-bar-fill" style="width: ${pct}%"></div>
             </div>
-            <p style="margin-top: 4px; font-size: 12px;">${complete} / ${total} parts (${pct}%)</p>
+            <div class="progress-row">
+              <p>${complete} / ${total} parts (${pct}%)</p>
+              <div class="filter-controls" id="filter-controls">
+                <label><input type="checkbox" id="filter-complete" checked> Complete</label>
+                <label><input type="checkbox" id="filter-incomplete" checked> Not Complete</label>
+                <label><input type="checkbox" id="filter-compact"> Compact</label>
+              </div>
+            </div>
           </div>
         `;
+
+        // Restore filter state from URL params
+        const params = new URLSearchParams(window.location.search);
+        const completeParam = params.get("complete");
+        const incompleteParam = params.get("incomplete");
+        const compactParam = params.get("compact");
+        document.getElementById("filter-complete").checked = completeParam !== "0";
+        document.getElementById("filter-incomplete").checked = incompleteParam !== "0";
+        document.getElementById("filter-compact").checked = compactParam === "1";
+
+        // Re-attach filter checkbox listeners
+        document.getElementById("filter-complete").addEventListener("change", applyFilters);
+        document.getElementById("filter-incomplete").addEventListener("change", applyFilters);
+        document.getElementById("filter-compact").addEventListener("change", applyFilters);
 
         renderPartsGrid();
       }
@@ -498,22 +600,24 @@
 
           return `
             <div class="part-card ${isComplete ? 'complete' : ''}" data-part-key="${partKey}" data-needed="${needed}">
-              <div class="part-card-color" style="background: ${color.rgb || '#888'}; color: ${textColor}; text-shadow: none;">
+              <div class="part-card-color" style="background: ${color.rgb || '#888'}; color: ${textColor};">
                 ${color.name}
               </div>
-              <div class="part-card-image">
-                <a href="${part.partUrl}" target="_blank">
-                  <img src="${part.thumbnail}" alt="${part.description}">
-                </a>
-                <div class="part-card-checkmark">&#10003;</div>
-              </div>
-              <div class="part-card-info">
-                <h4>${part.description || part.partNum}</h4>
-                <div class="part-card-controls">
-                  <span>Have ${have} of ${needed}</span>
-                  <div class="part-card-buttons">
-                    <button class="btn-minus" data-part-key="${partKey}">-</button>
-                    <button class="btn-plus" data-part-key="${partKey}">+</button>
+              <div class="part-card-body">
+                <div class="part-card-image">
+                  <a href="${part.partUrl}" target="_blank">
+                    <img src="${part.thumbnail}" alt="${part.description}">
+                  </a>
+                  <div class="part-card-checkmark">&#10003;</div>
+                </div>
+                <div class="part-card-info">
+                  <h4>${part.description || part.partNum}</h4>
+                  <div class="part-card-controls">
+                    <span>Have ${have} of ${needed}</span>
+                    <div class="part-card-buttons">
+                      <button class="btn-minus" data-part-key="${partKey}">-</button>
+                      <button class="btn-plus" data-part-key="${partKey}">+</button>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -564,7 +668,8 @@
         // Update the have count display
         const countSpan = card.querySelector(".part-card-controls span");
         if (countSpan) {
-          countSpan.textContent = `Have ${newCount} of ${needed}`;
+          const isCompact = document.getElementById("filter-compact")?.checked;
+          countSpan.textContent = isCompact ? `${newCount} of ${needed}` : `Have ${newCount} of ${needed}`;
         }
 
         // Update progress bar
@@ -607,6 +712,27 @@
       function applyFilters() {
         const showComplete = document.getElementById("filter-complete").checked;
         const showIncomplete = document.getElementById("filter-incomplete").checked;
+        const isCompact = document.getElementById("filter-compact").checked;
+
+        // Update URL params
+        const params = new URLSearchParams(window.location.search);
+        params.set("complete", showComplete ? "1" : "0");
+        params.set("incomplete", showIncomplete ? "1" : "0");
+        params.set("compact", isCompact ? "1" : "0");
+        const newUrl = `${window.location.pathname}?${params.toString()}`;
+        window.history.replaceState({}, "", newUrl);
+
+        // Toggle compact mode on grid
+        document.getElementById("parts-grid").classList.toggle("compact", isCompact);
+
+        // Update count display format based on compact mode
+        document.querySelectorAll(".part-card-controls span").forEach((span) => {
+          const text = span.textContent;
+          const match = text.match(/(\d+)\s*of\s*(\d+)/);
+          if (match) {
+            span.textContent = isCompact ? `${match[1]} of ${match[2]}` : `Have ${match[1]} of ${match[2]}`;
+          }
+        });
 
         // Clear any pending fade-outs
         pendingFadeOuts.forEach((timeoutId) => clearTimeout(timeoutId));
