--- a/inventory.html
+++ b/inventory.html
@@ -104,6 +104,16 @@
         color: #333;
         margin-bottom: 4px;
       }
+      .main-header-info h2 a {
+        color: inherit;
+        text-decoration: none;
+      }
+      .main-header-info h2 a:hover {
+        text-decoration: underline;
+      }
+      .main-header > a {
+        display: block;
+      }
       .main-header-info p {
         font-size: 14px;
         color: #888;
@@ -540,10 +550,11 @@
         const pct = total > 0 ? Math.round((complete / total) * 100) : 0;
 
         const header = document.getElementById("main-header");
+        const setUrl = `https://www.bricklink.com/v2/catalog/catalogitem.page?S=${selectedSetId}`;
         header.innerHTML = `
-          <img src="${set.image}" alt="">
+          <a href="${setUrl}" target="_blank"><img src="${set.image}" alt=""></a>
           <div class="main-header-info">
-            <h2>${set.name}</h2>
+            <h2><a href="${setUrl}" target="_blank">${set.name}</a></h2>
             <p>${selectedSetId} &bull; ${set.parts.length} unique parts</p>
             <div class="progress-bar">
               <div class="progress-bar-fill" style="width: ${pct}%"></div>
